--- a/stylesHW01.css
+++ b/stylesHW01.css
@@ -125,6 +125,7 @@ fieldset {
     background-color: rgb(234, 249, 255);
     padding-bottom: 35px;
     box-shadow: 3px 3px 8px rgb(170, 169, 169, 0.6);
+    margin: auto;
 }
 .contact-Name, .contact-Email, .contact-Gender, .contact-Message {
     margin: 15px;
